Fixed mobile burger and horizontal scroll due to margin in button column

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,4 +67,8 @@
  margin-top:10px !important;
 }
 }
-
+@media only screen and (max-width: 768px) {
+#leftsideButtonsColumn {
+  margin-right:0;
+}
+}
